force-app/main/default/objects/LiveChatTranscript/fields/AcceptUsingData__c.field-meta.xml
<CustomField>
    <fullName>AcceptUsingData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Using Data</label>
    <type>Checkbox</type>
</CustomField>