force-app/main/default/objects/LiveChatTranscript/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category live chat</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Nature__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Exchange/Return</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Credit note, gift voucher</fullName>
                <label>Credit note / Gift voucher</label>
            </value>
            <value>
                <fullName>Invoice duplicate</fullName>
            </value>
            <value>
                <fullName>Tax refund</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Characteristics</fullName>
            </value>
            <value>
                <fullName>Authentification</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Personalization</fullName>
            </value>
            <value>
                <fullName>Store information</fullName>
            </value>
            <value>
                <fullName>Horizon assistance</fullName>
            </value>
            <value>
                <fullName>Website&amp;App</fullName>
            </value>
            <value>
                <fullName>Head office, Company information, LVMH</fullName>
                <label>Head office / Company information / LVMH</label>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Collaboration &amp; Job opportunity</fullName>
            </value>
            <value>
                <fullName>Product quality</fullName>
            </value>
            <value>
                <fullName>Service web/CS</fullName>
            </value>
            <value>
                <fullName>Repair and Care advice</fullName>
            </value>
            <value>
                <fullName>Service store</fullName>
            </value>
            <value>
                <fullName>Company, LVMH</fullName>
                <label>Company / LVMH</label>
            </value>
            <value>
                <fullName>Cosmetovigilance</fullName>
            </value>
            <value>
                <fullName>Delivery, shipping, packing</fullName>
                <label>Delivery / Shipping / Packing</label>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Fashion show men</fullName>
            </value>
            <value>
                <fullName>Fashion show women</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>