force-app/main/default/objects/LiveChatTranscript/fields/Entry_URL__c.field-meta.xml
<CustomField>
    <fullName>Entry_URL__c</fullName>
    <label>Entry URL</label>
    <type>Url</type>
</CustomField>