force-app/main/default/objects/LiveChatTranscript/fields/Owner_country__c.field-meta.xml
<CustomField>
    <fullName>Owner_country__c</fullName>
    <formula>TEXT(Owner:User.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner country</label>
    <type>Text</type>
</CustomField>