force-app/main/default/objects/LiveChatTranscript/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>P SKU for live chat</description>
    <label>Product SKU</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipLabel>Product</relationshipLabel>
    <relationshipName>Live_Chats</relationshipName>
    <type>Lookup</type>
</CustomField>