force-app/main/default/objects/LiveChatTranscript/fields/Product_SKU_Unknown__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU_Unknown__c</fullName>
    <description>Product SKU unknown live chat</description>
    <label>Product SKU Unknown</label>
    <length>100</length>
    <type>Text</type>
</CustomField>