force-app/main/default/objects/LiveChatTranscript/fields/Product_Sub_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Line__c</fullName>
    <formula>TEXT( Product_SKU__r.Sub_Aesthetic_Line__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sub Line</label>
    <type>Text</type>
</CustomField>