force-app/main/default/objects/LiveChatTranscript/fields/Purchased_Product__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchased Product</label>
    <referenceTo>PPR_PurchProduct__c</referenceTo>
    <relationshipLabel>Live Chats</relationshipLabel>
    <relationshipName>Live_Chats</relationshipName>
    <type>Lookup</type>
</CustomField>