force-app/main/default/objects/LiveChatTranscript/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Resolution for live chat</description>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Response</fullName>
            </value>
            <value>
                <fullName>Request Creation (MyCR - POD - Request)</fullName>
                <label>Request Creation (MyCR / POD / Request / DCS)</label>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>No Response Required</fullName>
            </value>
            <value>
                <fullName>Cut Call / Wrong Number</fullName>
                <isActive>false</isActive>
                <label>Cut Call / Wrong Number</label>
            </value>
            <value>
                <fullName>Reply Made</fullName>
                <isActive>false</isActive>
                <label>Reply Made</label>
            </value>
            <value>
                <fullName>Reply to be made by CSC</fullName>
                <isActive>false</isActive>
                <label>Reply to be made by CSC</label>
            </value>
            <value>
                <fullName>Request to Store</fullName>
                <isActive>false</isActive>
                <label>Request to Store</label>
            </value>
            <value>
                <fullName>Sent Catalogue/ Brochure/ TYC/ Invitation</fullName>
                <isActive>false</isActive>
                <label>Sent Catalogue/ Brochure/ TYC/ Invitation</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
                <isActive>false</isActive>
                <label>Transfer</label>
            </value>
            <value>
                <fullName>Transfer to Headquarters</fullName>
                <isActive>false</isActive>
                <label>Transfer to Headquarters</label>
            </value>
            <value>
                <fullName>Transfer to Store</fullName>
                <isActive>false</isActive>
                <label>Transfer to Store</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>