force-app/main/default/objects/LiveChatTranscript/fields/SKU_Number__c.field-meta.xml
<CustomField>
    <fullName>SKU_Number__c</fullName>
    <formula>Product_SKU__r.SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU Number</label>
    <type>Text</type>
</CustomField>