force-app/main/default/objects/LiveChatTranscript/fields/Tech_Qualif_Not_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tech_Qualif_Not_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean variable that indicates if main flow terminated</description>
    <label>Tech_Qualif_Not_Completed</label>
    <type>Checkbox</type>
</CustomField>