force-app/main/default/objects/LiveChatTranscript/fields/Zone_country__c.field-meta.xml
<CustomField>
    <fullName>Zone_country__c</fullName>
    <formula>IF (Text (Country__c)=&quot;&quot;,&quot;INTERNATIONAL&quot;, 
IF(CONTAINS(&quot;CUB, CAN, USA, BRA, ARG, COL, CHL, MEX&quot;, Text( Country__c )), &quot;AMERICAS&quot;, 
IF(CONTAINS(&quot;FRA, BEL, CZE, SPA,ESP, ITA, IRL, NLD, GBR, DEU, RUS, AUT, FIN, BGR, HRV, DNK, MCO, NOR, PRT, SWE, CHE, DZA, SEN, TUN, TUR&quot;, Text ( Country__c )), &quot;EUROPE&quot;, 
IF(CONTAINS(&quot;JPN&quot;, Text( Country__c )), &quot;JAPAN&quot;, 
IF(CONTAINS(&quot;CHN&quot;, Text( Country__c )), &quot;CHINA&quot;, 
IF(CONTAINS(&quot;TWN, IDN, IND, AUS, MYS, THA, PHL, MAC, SGP, HKG, VNM, KHM, KOR, NZL&quot;, Text( Country__c )), &quot;APAC&quot;, 
IF(CONTAINS(&quot;JOR, AFG, KWT, QAT, SAU, IRQ, KAZ, LBN, ARE, IRN&quot;, Text( Country__c )), &quot;MIDDLE EAST&quot;,&quot;INTERNATIONAL&quot; 
) 
) 
) 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>