force-app/main/default/objects/LiveChatTranscript/recordTypes/Live_Chat.recordType-meta.xml
<RecordType>
    <fullName>Live_Chat</fullName>
    <active>true</active>
    <label>Live Chat</label>
</RecordType>