force-app/main/default/objects/LiveChatTranscript/validationRules/LiveChat_VR01_SKU_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>LiveChat_VR01_SKU_Mandatory</fullName>
    <active>true</active>
    <description>Mandatory fields: Product sku or Unknown product</description>
    <errorConditionFormula>AND( 
(ISBLANK( Product_SKU_Unknown__c )),
(ISBLANK ( Product_SKU__c )),
NOT($User.BypassVR__c),
OR(
ISPICKVAL ( Category__c , &quot;Availability&quot;),
ISPICKVAL( Category__c , &quot;Price&quot;),
ISPICKVAL ( Category__c , &quot;Characteristics&quot;),
ISPICKVAL ( Category__c , &quot;Reservation&quot;)),
NOT(ISPICKVAL( Resolution__c , &quot;&quot;))
)</errorConditionFormula>
    <errorDisplayField>Product_SKU__c</errorDisplayField>
    <errorMessage>Note: Please complete mandatory fields: Product sku or Unknown product designation</errorMessage>
</ValidationRule>