force-app/main/default/objects/LiveChatTranscript/listViews/Chat_APAC_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Chat_APAC_LiveChatTranscript</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Live Chat APAC</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>