force-app/main/default/objects/LiveChatTranscript/listViews/Live_Chat_Australia_N_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Live_Chat_Australia_N_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Chat Australia N</label>
    <queue>Live_Chat_Australia_N</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>