force-app/main/default/objects/LiveChatTranscript/listViews/Live_Chat_France.listView-meta.xml
<ListView>
    <fullName>Live_Chat_France</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Owner_country__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2023 12:00 AM</value>
    </filters>
    <label>Live Chat France</label>
    <queue>Live_Chat_France</queue>
</ListView>