force-app/main/default/objects/LiveChatTranscript/listViews/Live_Chat_India_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Live_Chat_India_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Chat India</label>
    <queue>Live_Chat_India</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>