force-app/main/default/objects/LiveChatTranscript/listViews/Live_Chat_Indonesia_EN_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Live_Chat_Indonesia_EN_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Chat Indonesia EN</label>
    <queue>Live_Chat_Indonesia_EN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>