force-app/main/default/objects/LiveChatTranscript/listViews/Live_Chat_Indonesia_ID_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Live_Chat_Indonesia_ID_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Chat Indonesia ID</label>
    <queue>Live_Chat_Indonesia_ID</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>