force-app/main/default/objects/LiveChatTranscript/listViews/Live_Chat_Middle_East_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Live_Chat_Middle_East_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Chat Middle East</label>
    <queue>Live_Chat_Middle_East</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>