force-app/main/default/objects/LiveChatTranscript/listViews/Live_Chat_New_Zealand_N_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Live_Chat_New_Zealand_N_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Chat New Zealand N</label>
    <queue>Live_Chat_New_Zealand_N</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>