force-app/main/default/objects/LiveChatTranscript/listViews/Live_Chat_Norway_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Live_Chat_Norway_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Chat Norway</label>
    <queue>Live_Chat_Norway</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>