force-app/main/default/objects/LiveChatTranscript/listViews/Live_Chat_Poland_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Live_Chat_Poland_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Chat Poland</label>
    <queue>Live_Chat_Poland</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>