force-app/main/default/objects/LiveChatTranscript/listViews/Live_Chat_Vietnam_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Live_Chat_Vietnam_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Chat Vietnam</label>
    <queue>Live_Chat_Vietnam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>