force-app/main/default/objects/LiveChatTranscript/listViews/My_Live_Chats.listView-meta.xml
<ListView>
    <fullName>My_Live_Chats</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Mine</filterScope>
    <label>My Live Chats</label>
</ListView>