force-app/main/default/objects/LiveChatTranscript/listViews/My_Not_Categorized_Chats.listView-meta.xml
<ListView>
    <fullName>My_Not_Categorized_Chats</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Resolution__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>1,4,5</value>
    </filters>
    <label>1- My Not Categorized Chats</label>
</ListView>