force-app/main/default/objects/LiveChatTranscript/listViews/X2_My_Completed_Chats_this_week.listView-meta.xml
<ListView>
    <fullName>X2_My_Completed_Chats_this_week</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Resolution__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>2- My Completed Chats</label>
</ListView>